@@ -37,6 +37,16 @@ Description: time-series data storage and display system (programs)
  This package contains command-line programs used to access and manipulate
  RRDs.
 
+Package: rrdcached
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: data caching daemon for RRDtool
+ RRDCacheD is a daemon that receives updates to existing RRD files, accumulates
+ them and, if enough have been received or a defined time has passed, writes
+ the updates to the RRD file. The daemon was written with big setups in mind.
+ Those setups usually run into I/O related problems. RRDCacheD's goal is to
+ alleviate these problems.
+
 Package: rrdtool-dbg
 Architecture: any
 Priority: extra
