@@ -1,0 +1,4 @@
+usr/bin/rrdcached
+usr/share/man/man1/rrdcached.1
+usr/share/doc/rrdtool/html/rrdcached.html usr/share/doc/rrdcached/html/
+usr/share/rrdtool/examples/rrdcached/* usr/share/doc/rrdcached/examples/
