@@ -25,8 +25,10 @@ rrdtool (1.4~rc2-1) experimental; urgency=low
     - The file includes a pointer to /usr/share/doc/quilt/README.source.
   * debian/librrd4.symbols:
     - Added symbols introduced in 1.4~rc2.
+  * Added new binary package 'rrdcached' for the newly introduced "data
+    caching daemon".
 
- -- Sebastian Harl <tokkee@debian.org>  Fri, 25 Sep 2009 22:22:05 +0200
+ -- Sebastian Harl <tokkee@debian.org>  Fri, 25 Sep 2009 22:35:04 +0200
 
 rrdtool (1.3.8-1) unstable; urgency=low
 
